# masters-project

./: Cargo.toml  README.md  identity.pfx  test.com.pfx
api_test/: Cargo.toml
api_test/src/: main.rs
log_viewer/: Cargo.toml
log_viewer/src/: main.rs
patched-deps/openssl-src-111.24.0+1.1.1s/: .cargo_vcs_info.json
patched-deps/openssl-src-111.24.0+1.1.1s/openssl/ssl/statem/: statem_lib.c
patched-deps/openssl-src-111.24.0+1.1.1s/src/: lib.rs
plc_interface/: Cargo.toml
plc_interface/src/: main.rs  packets  plc.rs
poker/: Cargo.toml
poker/src/: main.rs
proxy/: Cargo.toml  fullchain.pem  nochain.pfx  privkey.pem  remake.pfx
proxy/logs/: combined.log.old
proxy/src/: colours.rs  main.rs
replace_stream/: Cargo.toml
replace_stream/src/: lib.rs
replay/: Cargo.toml
replay/src/: main.rs
src/: main.rs  replace_stream.rs
tcp_to_tls/: Cargo.toml
tcp_to_tls/src/: main.rs
tpm_proxy/: Cargo.toml
tpm_proxy/src/: main.rs
udp_tls_bridge/: Cargo.toml
udp_tls_bridge/src/: main.rs
