[package]
name = "tls-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = { version = "0.2.11" , features = ['vendored'] }
tokio-native-tls = "0.3.0"
tokio = { version = "1.21.2", features = ['full'] }
colored = "2.0.0"
