[package]
name = "log_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
tui = "0.19"
crossterm = "0.26"
clap = { version = "4.1.8", features = ["derive"] }


[profile.release]
debug = true