[package]
name = "replace_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ['full'] }
tokio-util = { version = "0.7.4", features = ['io'] }
tokio-stream = "0.1.11"
bytes = "1.3.0"
