[package]
name = "plc_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
openssl-src = { path = "../patched-deps/openssl-src-111.24.0+1.1.1s" }

[dependencies]
native-tls = { version = "0.2.11", features = ['vendored'] }
anyhow = "1.0.69"